--- a/biome.json
+++ b/biome.json
@@ -11,7 +11,8 @@
   },
   "formatter": {
     "enabled": true,
-    "indentStyle": "space"
+    "indentStyle": "space",
+    "formatWithErrors": false
   },
   "organizeImports": {
     "enabled": false
@@ -22,6 +23,9 @@
       "recommended": true,
       "style": {
         "noParameterAssign": "off"
+      },
+      "suspicious": {
+        "noExplicitAny": "off"
       }
     }
   },
