--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@reliverse/pathkit",
-  "version": "1.2.0",
+  "version": "1.2.2",
   "type": "module",
   "description": "@reliverse/pathkit is a slash‑consistent, cross‑platform path manipulation, with POSIX forward slash, drop‑in for node:path and unjs/pathe. This library extends the node:path module with a set of functions for manipulating file paths.",
   "scripts": {
@@ -13,14 +13,14 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@eslint/js": "^9.27.0",
-    "@reliverse/dler": "^1.5.7",
+    "@reliverse/dler": "1.6.4",
     "@reliverse/relifso": "^1.3.1",
     "@reliverse/relinka": "^1.4.7",
     "@reliverse/rematch": "^1.1.0",
     "@stylistic/eslint-plugin": "^4.4.0",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/bun": "^1.2.14",
-    "@types/node": "^22.15.21",
+    "@types/node": "^22.15.23",
     "eslint": "^9.27.0",
     "eslint-plugin-no-relative-import-paths": "^1.6.1",
     "eslint-plugin-perfectionist": "^4.13.0",
@@ -28,6 +28,6 @@
     "magic-string": "^0.30.17",
     "p-map": "^7.0.3",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.1"
+    "typescript-eslint": "^8.33.0"
   }
 }
